--- a/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
+++ b/SupplierRanking/Views/HomeLogada/Pesquisa.cshtml
@@ -71,33 +71,40 @@
                                     <div class="d-flex align-items-baseline pl-3">
 
                                         <div class="d-flex col-10 justify-content-around align-items-center pl-5 pr-5">
-                                            <div class="d-flex align-items-baseline pl-3 pr-5">
-                                                <h2 class="m-0" style="font-weight: bold;">
+                                            <div class="d-flex pl-3 pr-5">
+                                                <img src="/Content/images/media.png" height="30" width="30" style="background-color:  transparent;" />
+                                                <h2 class="m-0 ml-2" style="font-weight: bold;">
                                                     @item.Media
                                                 </h2>
                                             </div>
-                                            <div>
-                                                <img src="~/Content/images/qualidade.png" height="40" width="40" style="background-color: white; border-radius:50%" />
-                                                @item.Media_qualidade
-                                            </div>
 
                                             <div>
-                                                <img src="~/Content/images/atendimento.png" height="40" width="40" style="background-color: white; border-radius:50%" />
-                                                @item.Media_atendimento
-                                            </div>
-
-                                            <div>
-                                                <img src="~/Content/images/entrega.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                                <img src="/Content/images/velocidade-entrega.png" height="40" width="40" alt="Velocidade de Entrega"
+                                                     style="background-color:  transparent; border-radius:50%" />
                                                 @item.Media_entrega
                                             </div>
 
                                             <div>
-                                                <img src="~/Content/images/preço.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                                <img src="/Content/images/qualidade-produto.png" height="40" width="40" alt="Qualidade do Produto"
+                                                     style="background-color:  transparent; border-radius:50%" />
+                                                @item.Media_qualidade
+                                            </div>
+
+                                            <div>
+                                                <img src="/Content/images/preco.png" height="40" width="40" alt="Preço"
+                                                     style="background-color:  transparent; border-radius:50%" />
                                                 @item.Media_preco
                                             </div>
 
                                             <div>
-                                                <img src="~/Content/images/satisfacao.png" height="40" width="40" style="background-color: white; border-radius:50%" />
+                                                <img src="/Content/images/atendimento.png" height="40" width="40" alt="Atendimento"
+                                                     style="background-color:  transparent; border-radius:50%" />
+                                                @item.Media_atendimento
+                                            </div>
+
+                                            <div>
+                                                <img src="/Content/images/satisfacao.png" height="40" width="40" alt="Satisfação Geral"
+                                                     style="background-color:  transparent; border-radius:50%" />
                                                 @item.Media_satisfacao
                                             </div>
                                         </div>
